--- a/rover/package.json
+++ b/rover/package.json
@@ -1,6 +1,8 @@
 {
   "name": "rover",
   "version": "0.1.0",
+  "description": "An interview coding project for rover.com",
+  "homepage": "http://www.adampacholski.com/rover",
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
