--- a/rover/package.json
+++ b/rover/package.json
@@ -11,10 +11,12 @@
     "koa-morgan": "^1.0.1",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
+    "mysql2": "^1.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
-    "sqlite": "^2.9.0"
+    "sequelize": "^4.28.6",
+    "sqlite3": "^3.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
