Using jest for test on client and server

--- a/rover/package.json
+++ b/rover/package.json
@@ -12,6 +12,7 @@
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "mysql2": "^1.5.1",
+    "node-cleanup": "^2.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
@@ -28,5 +29,6 @@
     "/api": {
       "target": "http://localhost:3030"
     }
-  }
+  },
+  "devDependencies": {}
 }
