Forgot to change this back

--- a/rover/package.json
+++ b/rover/package.json
@@ -2,7 +2,7 @@
   "name": "rover",
   "version": "0.1.0",
   "description": "An interview coding project for rover.com",
-  "homepage": "http://www.adampacholski.com/",
+  "homepage": "http://www.adampacholski.com/rover",
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
