--- a/rover/package.json
+++ b/rover/package.json
@@ -23,6 +23,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.28.6",
     "sqlite3": "^3.1.13"
