--- a/rover/package.json
+++ b/rover/package.json
@@ -23,6 +23,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "react-star-rating-component": "^1.3.0",
+    "react-ultimate-pagination": "^1.0.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
