--- a/rover/package.json
+++ b/rover/package.json
@@ -12,6 +12,7 @@
     "koa-compress": "^2.0.0",
     "koa-morgan": "^1.0.1",
     "koa-router": "^7.3.0",
+    "koa-send": "^4.1.2",
     "koa-static": "^4.0.2",
     "log4js": "^2.4.1",
     "mysql2": "^1.5.1",
